syntax = "proto3";
option java_outer_classname = "ErrorMessageProtos";
//option java_package = "messaging.protos";

package messaging.protos;

 message ErrorMessage {
	string message = 1;
	string exception_class = 2;
}